# battle-city-clone

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  battle-city.spec  core-game-mechanics.md  main.py  pyproject.toml  technical-architecture.md
.cursor/rules/: development-guidelines.mdc  testing-rules.mdc
.github/workflows/: ci.yml  release.yml  version-bump.yml
assets/: battle-city.tiled-project
assets/config/: ai_teammate.json  enemy_types.json  sprites.json
assets/maps/: demo_powerups.tmx  level_01.tmx  level_02.tmx  level_03.tmx  level_04.tmx  level_05.tmx  level_06.tmx  level_07.tmx  level_08.tmx  level_09.tmx  level_10.tmx  level_11.tmx  level_12.tmx  level_13.tmx  level_14.tmx  level_15.tmx  level_16.tmx  level_17.tmx  level_18.tmx  level_19.tmx  level_20.tmx  level_21.tmx  level_22.tmx  level_23.tmx  level_24.tmx  level_25.tmx  level_26.tmx  level_27.tmx  level_28.tmx  level_29.tmx  level_30.tmx  level_31.tmx  level_32.tmx  level_33.tmx  level_34.tmx  level_35.tmx
assets/sprites/: sprites.tsx  sprites_8x8.tsx
docs/: 05-enemy-tanks.md  06-integration-tests.md  battle-city-enemy-data.md  collision-manager-implementation.md  implementation-steps.md
installer/linux/: com.battlecity.BattleCity.desktop  com.battlecity.BattleCity.yml  python-deps.yaml
installer/windows/: battle-city.iss
scripts/: controller_debug.py  generate_icons.py  generate_sounds.py
src/: __init__.py  main.py
src/core/: __init__.py  ai_geometry.py  bullet.py  effect.py  enemy_tank.py  game_object.py  map.py  player_tank.py  power_up.py  tank.py  tile.py
src/managers/: ai_player_input.py  collision_manager.py  collision_response_handler.py  effect_manager.py  game_manager.py  input_handler.py  menu_controller.py  player_input.py  player_manager.py  power_up_manager.py  renderer.py  settings_manager.py  sound_manager.py  spawn_manager.py  texture_manager.py
src/states/: game_mode.py  game_state.py
src/utils/: animation.py  collections.py  paths.py  (+2 more)
tests/: __init__.py  conftest.py
(+63 files in other folders)
