[project]
name = "battle-city-clone"
version = "0.9.0"
description = "Just a Battle City (NES) clone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame",
    "loguru",
    "pytmx",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff",
]
build = [
    "pyinstaller",
    "bump-my-version",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "."
]

[tool.bumpversion]
current_version = "0.9.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "installer/windows/battle-city.iss"
search = '#define MyAppVersion "{current_version}"'
replace = '#define MyAppVersion "{new_version}"'
